Squash of WIP GValue commits