@@ -18,8 +18,6 @@
  */
 package org.apache.tinkerpop.gremlin.process.traversal;
 
-import java.util.Objects;
-import java.util.stream.Collectors;
 import org.apache.tinkerpop.gremlin.process.traversal.step.GValue;
 
 import java.io.Serializable;
@@ -34,25 +32,21 @@ import java.util.Set;
  * The {@code GValueManager} class is responsible for managing the state of {@link GValue} instances and their
  * associations with `Step` objects in a traversal. This class ensures that `GValue` instances are properly extracted
  * and stored in a registry, allowing for dynamic query optimizations and state management during traversal execution.
+ * Note that the manager can be locked, at which point it becomes immutable, and any attempt to modify it will result
+ * in an exception.
  */
 public final class GValueManager implements Serializable, Cloneable {
 
     private final Map<String, GValue<?>> gValueRegistry = new HashMap<>();
-    /**
-     * Tracks pinned values for faster lookup.
-     */
-    private final Set<String> pinnedVariables = new HashSet<>();
+    private final Map<String, GValue<?>> pinnedGValues = new HashMap<>();
 
-    /**
-     * Creates a new empty GValueManager.
-     */
     public GValueManager() {
-        this(Collections.emptyMap(), Collections.emptySet());
+        this(Collections.EMPTY_MAP, Collections.EMPTY_MAP);
     }
 
-    private GValueManager(final Map<String, GValue<?>> gValueRegistry, final Set<String> pinnedVariables) {
+    private GValueManager(final Map<String, GValue<?>> gValueRegistry, final Map<String, GValue<?>> pinnedGValues) {
         this.gValueRegistry.putAll(gValueRegistry);
-        this.pinnedVariables.addAll(pinnedVariables);
+        this.pinnedGValues.putAll(pinnedGValues);
     }
 
     /**
@@ -63,8 +57,9 @@ public final class GValueManager implements Serializable, Cloneable {
      * @param other the target {@code GValueManager} into which the current instance's registries will be merged
      */
     public void mergeInto(final GValueManager other) {
-        other.register(gValueRegistry.values());
-        other.pinGValues(pinnedVariables);
+        //TODO deal with conflicts
+        other.gValueRegistry.putAll(gValueRegistry);
+        other.pinnedGValues.putAll(pinnedGValues);
     }
 
     /**
@@ -78,8 +73,9 @@ public final class GValueManager implements Serializable, Cloneable {
      * Gets the set of variable names used in this traversal which have not been pinned to specific values.
      */
     public Set<String> getUnpinnedVariableNames() {
-        final Set<String> variableNames = new HashSet<>(gValueRegistry.keySet());
-        variableNames.removeAll(pinnedVariables);
+        Set<String> variableNames = new HashSet<>();
+        variableNames.addAll(gValueRegistry.keySet());
+        variableNames.removeAll(pinnedGValues.keySet());
         return Collections.unmodifiableSet(variableNames);
     }
 
@@ -87,28 +83,28 @@ public final class GValueManager implements Serializable, Cloneable {
      * Gets the set of variable names used in this traversal which have not been pinned to specific values.
      */
     public Set<String> getPinnedVariableNames() {
-        return Collections.unmodifiableSet(pinnedVariables);
+        return Collections.unmodifiableSet(pinnedGValues.keySet());
     }
 
     /**
      * Gets the set of {@link GValue} objects used in this traversal.
      */
     public Set<GValue<?>> getGValues() {
-        return Set.copyOf(gValueRegistry.values());
+        return Collections.unmodifiableSet(new HashSet(gValueRegistry.values()));
     }
 
     /**
      * Gets the set of pinned GValues used in this traversal.
      */
     public Set<GValue<?>> getPinnedGValues() {
-        return pinnedVariables.stream().map(gValueRegistry::get).collect(Collectors.toUnmodifiableSet());
+        return Collections.unmodifiableSet(new HashSet(pinnedGValues.values()));
     }
 
     /**
      * Determines whether the manager has step registrations.
      */
     public boolean hasVariables() {
-        return !gValueRegistry.isEmpty();
+        return !getVariableNames().isEmpty();
     }
 
     /**
@@ -119,43 +115,32 @@ public final class GValueManager implements Serializable, Cloneable {
     }
 
     /**
+     * Delete all data.
+     */
+    public void reset() {
+        gValueRegistry.clear();
+    }
+
+    /**
      * Pins any GValue with the provided name. This should be called anytime an optimization
      * alters the Traversal based on the current value of a GValue. This indicates that the resulting traversal is only
      * valid for this specific value of a GValue, and is not generalizable to any parameter value.
      *
      * @param name the name of the GValue to be pinned
-     * @return true if name was previously unpinned, false otherwise.
-     * @throws IllegalArgumentException if no GValue of the given name is registered
+     * @return true if name matches a registered GValue which was successfully pinned, false otherwise.
+     * @throws IllegalStateException if the manager is locked
      */
     public boolean pinVariable(final String name) {
         if (name == null || !gValueRegistry.containsKey(name)) {
-            throw new IllegalArgumentException(String.format("Unable to pin variable '%s' because it is not registered", name));
+            return false;
         }
-        return pinnedVariables.add(name);
+        pinnedGValues.put(name, gValueRegistry.get(name));
+        return true;
     }
 
-    /**
-     * Creates a deep copy of this GValueManager with cloned GValue instances.
-     *
-     * @return a new GValueManager instance with cloned state
-     * @throws CloneNotSupportedException if cloning fails
-     */
     @Override
-    public GValueManager clone() throws CloneNotSupportedException {
-        final Map<String, GValue<?>> clonedRegistry = new HashMap<>();
-        for (final Map.Entry<String, GValue<?>> entry : gValueRegistry.entrySet()) {
-            // clone each gValue
-            clonedRegistry.put(entry.getKey(), entry.getValue().clone());
-        }
-        return new GValueManager(clonedRegistry, new HashSet<>(pinnedVariables));
-    }
-
-    /**
-     * Pin a collection of {@link GValue} by name from the internal registry. Iteratively processes each
-     * {@link GValue} name to pin it to its current value.
-     */
-    public void pinGValues(final Set<String> names) {
-        names.stream().filter(Objects::nonNull).forEach(this::pinVariable);
+    public GValueManager clone() {
+        return new GValueManager(gValueRegistry, pinnedGValues);
     }
 
     /**
@@ -163,46 +148,22 @@ public final class GValueManager implements Serializable, Cloneable {
      * {@link GValue} to pin it to its current value.
      */
     public void pinGValues(final Collection<GValue<?>> gValues) {
-        pinGValues(gValues.stream().filter(v -> v != null && v.isVariable()).map(GValue::getName).collect(Collectors.toSet()));
+        for (GValue<?> gValue : gValues) {
+            if (gValue.isVariable()) {
+                pinnedGValues.put(gValue.getName(), gValue);
+            }
+        }
     }
 
-    /**
-     * Registers a GValue in the internal registry if it represents a variable. Non-variables are not registered.
-     *
-     * @param gValue the GValue to register
-     * @throws IllegalArgumentException if a different GValue with the same name is already registered
-     */
-    public void register(final GValue<?> gValue) {
+    public void track(GValue<?> gValue) {
         if (gValue.isVariable()) {
-            if (gValueRegistry.containsKey(gValue.getName()) && !gValueRegistry.get(gValue.getName()).equals(gValue)) {
-                throw new IllegalArgumentException(String.format("Unable to register both %s and %s in a single traversal", gValueRegistry.get(gValue.getName()), gValue));
-            }
             gValueRegistry.put(gValue.getName(), gValue);
         }
     }
 
-    /**
-     * Registers a collection of GValues in the internal registry. Non-variables are not registered.
-     *
-     * @param gValues the collection of GValues to register
-     */
-    public void register(final Collection<GValue<?>> gValues) {
-        gValues.forEach(this::register);
-    }
-
-    /**
-     * Updates the value of a registered variable.
-     *
-     * @param name the name of the variable to update
-     * @param value the new value for the variable
-     * @throws IllegalArgumentException if the variable is not registered or is already pinned
-     */
-    public void updateVariable(final String name, final Object value) {
-        if (!gValueRegistry.containsKey(name)) {
-            throw new IllegalArgumentException(String.format("Unable to update variable '%s' as it has not been registered in this traversal", name));
-        } else if (pinnedVariables.contains(name)) {
-            throw new IllegalArgumentException(String.format("Unable to update variable '%s' as it is already pinned", name));
+    public void track(Collection<GValue<?>> gValues) {
+        for (GValue<?> gValue : gValues) {
+            track(gValue);
         }
-        gValueRegistry.put(name, GValue.of(name, value));
     }
 }
